Fix white spaces

--- a/src/app/components/global/post/post.component.css
+++ b/src/app/components/global/post/post.component.css
@@ -70,6 +70,7 @@
   gap: 1rem;
   align-items: center;
   justify-content: space-around;
+  z-index: -1;
 }
 
 .mdc-button {
